# Project6-Part2

./: AircraftFuelMonitor.sln  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.csproj  Client.sln  Client.vcxproj  Client.vcxproj.filters  EnduranceTest_Batch.bat  LoadTest_Batch.bat  PacketBuilder.cpp  PacketBuilder.cs  PacketBuilder.h  Program.cs  TcpTransmitter.cpp  TcpTransmitter.cs  TcpTransmitter.h  TelemetryDataPoint.cs  TelemetryDataPoint.h  TelemetryFileReader.cpp  TelemetryFileReader.cs  TelemetryFileReader.h  main.cpp
Server/: AirplaneRecord.cs  AirplaneRecord.h  CMakeLists.txt  ClientHandler.cpp  ClientHandler.cs  ClientHandler.h  FleetDataManager.cpp  FleetDataManager.cs  FleetDataManager.h  FuelCalculator.cpp  FuelCalculator.cs  FuelCalculator.h  Logger.cpp  Logger.cs  Logger.h  Program.cs  Server.csproj  Server.sln  Server.vcxproj  Server.vcxproj.filters  TelemetryDataPoint.cs  main.cpp
